tests/golden/type_errors/range_assignment.cd
let values = range(3);
values[0] = 1;
