tests/golden/type_errors/range_assignment.err
Type error at 2:7: cannot assign range elements
  values[0] = 1;
        ^
